--- a/style.css
+++ b/style.css
@@ -1,4 +1,27 @@
+body {
+    background: linear-gradient(#f8b47c, rgb(255, 213, 179))
+    no-repeat
+    fixed
+    }
 h1 { 
-    color: blue; 
-    font-family: helvetica
+    text-align: center;
+    border-top-style: double;
+    border-width: 1px;
+    border-radius: 64px;
+    padding: 16px;
+    color: rgb(255, 255, 255); 
+    font-family: "helvetica";
+    font-size: 100px;
+    text-shadow: 5px 5px 5px #f5a768;
+    } 
+p { 
+    text-align: center;
+    border-bottom-style: none;
+    border-width: 1px;
+    border-radius: 80px;
+    padding: 16px;
+    color: rgb(255, 255, 255);
+    font-family: "helvetica";
+    font-size: 50px;
+    text-shadow: 2px 2px 2px #f5a768;
 } 
