--- a/v.1/style.css
+++ b/v.1/style.css
@@ -47,3 +47,22 @@ p {
   justify-content: center;
   gap: 10px;
 }
+
+.button-primary {
+display: block;
+margin: 0 auto;
+background-color: #f5a66582;
+  color: rgb(255, 255, 255);
+  
+  padding: 16px 32px;
+  border-style: none;
+  border-width: 0px;
+  border:rgb(255, 255, 255);
+  border-radius: 6px;
+  font-size: 24px;
+  cursor: pointer;
+}
+.button-primary:hover {
+  background-color: #f5a768;
+
+}
